--- a/basketball_stats/user/templates/home.html
+++ b/basketball_stats/user/templates/home.html
@@ -1,3 +1,8 @@
 <html>
-    <body>home</body>
+    <body>
+        <button type="button" onclick="location.href='/register'">회원가입</button>
+        <button type="button" onclick="location.href='/login'">로그인</button>
+        <button type="button" onclick="location.href='/register_team'">팀 등록</button>
+        <button type="button" onclick="location.href='/boards'">게시판</button>
+    </body>
 </html>
