--- a/basketball_stats/user/templates/login.html
+++ b/basketball_stats/user/templates/login.html
@@ -29,6 +29,6 @@
             <button type="submit" class="btn btn-primary">로그인</button>
         </form>
     </div>
-    <button type="button" class="btn btn-primary" onclick="location.href='/user/register'">회원가입</button>
+    <button type="button" class="btn btn-primary" onclick="location.href='/register'">회원가입</button>
 </div>
 {% endblock %}
