--- a/basketball_stats/user/templates/register_team.html
+++ b/basketball_stats/user/templates/register_team.html
@@ -5,6 +5,7 @@
     <div class="row mt-5">
         <div class="col-12 text-center">
             <h1>팀 등록</h1>
+            <h6>팀 등록이 되지 않은 경우 회원가입이 불가능합니다.</h6>
         </div>
     </div>
     <div class="row mt-5">
@@ -20,7 +21,7 @@
             <span style="color: red">{{ field.errors }}</span>
             {% endif %}
             {% endfor %}
-            <button type="submit" class="btn btn-primary">등록 신청</button>
+            <button type="submit" class="btn btn-primary">신청</button>
         </form>
     </div>
 </div>
