--- a/basketball_stats/user/templates/register_team.html
+++ b/basketball_stats/user/templates/register_team.html
@@ -2,6 +2,9 @@
 
 {% block contents %}
 <div class="container">
+    <div>
+        <button type="button" onclick="location.href='/'">home</button>
+    </div>
     <div class="row mt-5">
         <div class="col-12 text-center">
             <h1>팀 등록</h1>
